--- a/apexlegend/apexlegend.html
+++ b/apexlegend/apexlegend.html
@@ -3,20 +3,24 @@
 
 <head>
 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-   <link rel="stylesheet" href="style.css">
     <title> Apex Legendd </title>
 </head>
 
 <body>
 
 
-    <div class="ApexLegend">
+    <div class="Apex Legend">
         <img src="https://cdn.akamai.steamstatic.com/steam/apps/1172470/capsule_616x353.jpg?t=1616797129"width=100%>
+        <p> For PlayStation® 4, PlayStation 5, Xbox One, Xbox Series X|S, Nintendo Switch, and PC via Origin and Steam.</p>
+        <button type="button" class="btn btn-primary"> Download</button>
     </div>
 
-<br>
+    <br>
 
 <div>
     <div>
@@ -33,6 +37,34 @@
     </div>
 </div>
 
+ <h1> Contact Form</h1>
+        <div> 
+            <form>
+                <p> First Name</p>
+                <input type="text" name="firstname">
+
+                <p> Last Name</p>
+                <input type="text" name="lastName">
+
+                <p> Address</p>
+                <input type="text" name="Address">
+
+                <p> City and State</p>
+                <input type="text" name="City and State">
+
+                <p> Zip Code</p>
+                <input type="text" name="zip">
+
+                <p> Chose An Option</p>
+                <input type="radio" name="option"> Demo
+                <input type="radio" name="option"> Beta
+                <input type="radio" name="option"> Ultimate Battle Royale
+
+                
+                 </form>
+        </div>
+
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 </body>
 
 
