--- a/apexlegend/apexlegend.html
+++ b/apexlegend/apexlegend.html
@@ -13,6 +13,7 @@
 
 <body>
 
+<h1> Apex Legend: Battle Royal </h1>
 
     <div class="Apex Legend">
         <img src="https://cdn.akamai.steamstatic.com/steam/apps/1172470/capsule_616x353.jpg?t=1616797129"width=100%>
@@ -37,7 +38,7 @@
     </div>
 </div>
 
- <h1> Contact Form</h1>
+ <h2> Order Form </h2>
         <div> 
             <form>
                 <p> First Name</p>
